--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ protobuf==6.33.0
 pycparser==2.23
 python-dateutil==2.9.0.post0
 pytz==2025.2
+redis==6.4.0
 requests==2.32.5
 six==1.17.0
 soupsieve==2.8
