--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.546.0"
+    "lucide-react": "^0.546.0",
+    "react-router-dom": "^7.9.4"
   }
 }
