--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "react-router-dom": "^7.9.4"
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1"
   }
 }
